Update ManetGraphApp (attached "add path" command)